Fix build caching

--- a/Dockerfile-arm64v8
+++ b/Dockerfile-arm64v8
@@ -10,7 +10,7 @@ RUN go get -u gopkg.in/src-d/go-git.v4/...
 RUN go get -v -d github.com/toshbrown/lib-go-databox
 COPY . .
 RUN addgroup -S databox && adduser -S -g databox databox
-RUN GGO_ENABLED=0 GOOS=linux go build -a -tags netgo -installsuffix netgo -ldflags '-s -w' -o app /*.go
+RUN GGO_ENABLED=0 GOOS=linux go build -a -ldflags '-s -w' -o app /*.go
 
 FROM arm64v8/alpine:3.8
 COPY --from=gobuild /etc/passwd /etc/passwd
