Update to databox 0.5.1 and arm64v8 support

--- a/Dockerfile-arm64v8
+++ b/Dockerfile-arm64v8
@@ -5,19 +5,22 @@ RUN apk update && apk add build-base pkgconfig go git libzmq zeromq-dev alpine-s
 ENV GOPATH /
 WORKDIR /
 
-#COPY . . if you update the libs below build with --no-cache
-RUN go get -u gopkg.in/src-d/go-git.v4/...
+RUN go get -u -d gopkg.in/src-d/go-git.v4/...
 RUN go get -v -d github.com/me-box/lib-go-databox
+RUN go get -v -d github.com/gorilla/mux
 COPY . .
 RUN addgroup -S databox && adduser -S -g databox databox
+#RUN GGO_ENABLED=0 GOOS=linux go build -a -tags netgo -installsuffix netgo -ldflags '-s -w' -o app /*.go
 RUN GGO_ENABLED=0 GOOS=linux go build -a -ldflags '-s -w' -o app /*.go
 
 FROM arm64v8/alpine:3.8
 COPY --from=gobuild /etc/passwd /etc/passwd
-RUN apk update && apk add libzmq
+RUN apk update && apk add --no-cache libzmq ca-certificates
+RUN mkdir -p /app && chown databox /app
 USER databox
-WORKDIR /
+WORKDIR /app
 COPY --from=gobuild /app .
+COPY --from=gobuild /public ./public
 LABEL databox.type="driver"
 EXPOSE 8080
 
